[package]
name = "color-info"
version = "0.1.0"
authors = ["Srujan Deshpande <srujan.deshpande@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
#hyper = "0.12.35"
#tokio-core = "0.1.17"
#futures = "0.1.29"
#reqwest = { version = "0.10", features = ["blocking","json"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
